--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
   <h1>Objects and Json</h1>
+  <!-- Object is the depending on Keys : Values  and Object provide security.-->
+
+  <script src="script.js"></script>   <!-- Atteched script file with html-->
 </body>
 </html>
